--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,14 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "compression": "^1.7.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.0.0",
     "mongoose": "^8.8.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "uuid": "^11.0.3"
   }
